--- a/S10_ErudioMicroservices.NET6-DefiningTheLayoutAndConsumingProductsMicroservice/GeekShooping/GeekShopping.Web/Views/Product/ProductIndex.cshtml
+++ b/S10_ErudioMicroservices.NET6-DefiningTheLayoutAndConsumingProductsMicroservice/GeekShooping/GeekShopping.Web/Views/Product/ProductIndex.cshtml
@@ -9,7 +9,7 @@
             </div>
             <div class="col text-end pt-1">
                 <a asp-action="ProductCreate" class="btn btn-outline-primary">
-                <i class="fas fa-plus px-2"></i>Create new Product
+                <i class="fas fa-plus me-1"></i>Create new Product
                 </a>
             </div>
         </div>
@@ -39,6 +39,14 @@
                     </td>
                     <td>
                         @((item.Price).ToString("c"))
+                    </td>
+                    <td>
+                        <a asp-action="ProductEdit" class="btn btn-success" asp-route-id="@item.Id">
+                            <i class="fas fa-edit"></i>
+                        </a>
+                        <a asp-action="ProductDelete" class="btn btn-danger" asp-route-id="@item.Id">
+                            <i class="fas fa-trash"></i>
+                        </a>
                     </td>
                 </tr>
             }
